--- a/.github/workflows/quarto-gh-pages.yml
+++ b/.github/workflows/quarto-gh-pages.yml
@@ -23,21 +23,9 @@ jobs:
       - name: Set up R
         uses: r-lib/actions/setup-r@v2
 
-      - name: Install R deps
-        uses: r-lib/actions/setup-r-dependencies@v2
-        with:
-          extra-packages: |
-            any::tidyverse
-            any::tidygraph
-            any::igraph
-            any::ggraph
-            any::scales
-            any::readxl
-            any::ggpubr
-            any::jsonlite
-            any::htmltools
-            any::ggupset
-            any::patchwork
+      - name: Install R packages (CRAN)
+        run: |
+          Rscript -e "install.packages(c('tidyverse','tidygraph','igraph','ggraph','scales','readxl','ggpubr','jsonlite','htmltools','ggupset','patchwork','here','knitr','rmarkdown'), repos='https://cloud.r-project.org')"
 
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
