--- a/.github/workflows/quarto-gh-pages.yml
+++ b/.github/workflows/quarto-gh-pages.yml
@@ -31,7 +31,7 @@ jobs:
         uses: quarto-dev/quarto-actions/setup@v2
 
       - name: Render site (docs folder)
-        run: quarto render src/kinasecanvas_final.qmd --output-dir docs
+        run: quarto render docs/kinasecanvas_final.qmd --output-dir docs
 
       - name: Ensure index.html present
         run: |
