--- a/.github/workflows/quarto-gh-pages.yml
+++ b/.github/workflows/quarto-gh-pages.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Render site (docs folder)
         run: |
           mkdir -p docs
-          quarto render kinasecanvas_final.qmd --output-dir docs
+          quarto render docs/kinasecanvas_final.qmd --output-dir docs
 
       - name: Ensure index.html present
         run: |
